Fix for submenus on mobile

--- a/sass/03-components/_02-navigation.scss
+++ b/sass/03-components/_02-navigation.scss
@@ -172,6 +172,7 @@
 
 /*_______ Submenus _______*/
 	.sub-menu{
+		display: block !important;
 		list-style: none;
 		width: auto;
 		margin: 0 auto;
